2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/Cairo.t
	* t/CairoFont.t
	* t/CairoPath.t
	* t/CairoPattern.t
	* t/CairoSurface.t: Don't use the hash-ref variant of the constant
	pragma.  It's not supported by the version that ships with perl
	5.6.

2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Cairo.pm
	* NEWS
	* README: Release 1.043.

2007-10-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Use BEGIN { require 5.006; } instead of require
	v5.6.0.  Make missing Test::Number::Delta non-fatal; add it to the
	build_requires META.yml field.

	* t/Cairo.t
	* t/CairoPattern.t: Cope with Test::Number::Delta being
	unavailable.

2007-10-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Make EU::MM output configure_requires and no_index
	information when generating META.yml.

	* t/CairoSurface.t (PNG surface tests): Since exceptions are
	actually propagated now, throw the same kind of exception we test
	for.

2007-10-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Require perl >= 5.6.0 for some features we use,
	like `our´.

2007-09-30	tsch

	* ppport.h
	* Cairo.xs
	* CairoPath.xs
	* CairoPattern.xs
	* CairoSurface.xs
	* MANIFEST
	* cairo-perl-private.h
	* cairo-perl.h: Add and use the portability header ppport.h from
	Devel::PPPort to hopefully fix compilation on older perls.

2007-09-27	tsch

	* Cairo.pm
	* NEWS
	* README: Stable release 1.042.

2007-09-27	tsch

	* Makefile.PL: Make missing prerequisites fatal.

2007-09-09	tsch

	* cairo-perl.typemap: Add const char * for backwards
	compatibility.

2007-08-13	tsch

	* doctypes: Add missing type names.

2007-05-27	tsch

	* Cairo.pm, NEWS, README: Stable release 1.041.

2007-05-27	tsch

	* t/CairoSurface.t: Use proper version checks to decide when to
	skip the create_for_stream tests.

2007-05-13	tsch

	* Makefile.PL, README, t/Cairo.t, t/CairoPattern.t: Use
	Test::Number::Delta to make floating point number comparisons more
	reliable.

2007-05-10	tsch
